# multimedia

./: Readme.md
opencv/practice/aviPlayer/: CMakeLists.txt  main.cpp  smoothImage.cpp  smoothImage.h
opencv/practice/displayImage/: CMakeLists.txt  main.cpp
sdl/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtsdlDemo.pro  sdlwidget.cpp
sdl/qtsdldemo/: .gitignore  mainwindow.cpp  sdlwidget.cpp  sdlwidget.h
sdl/tutorial/safe_init_quit/: .gitignore  CMakeLists.txt  main.cpp
sdl/tutorial/thread/: CMakeLists.txt  main.cpp
